--- a/resume.html
+++ b/resume.html
@@ -594,10 +594,15 @@
                
                <form action="#" method="post" id="contactForm" name="contactForm">
       				  	<fieldset>
-
                         <div>
                           <p>
-                            <img src="myresume/images/phone.png" width="15px" height="15px"> 联系电话：<a href="tel:13627275116">13627275116</a>
+                            <img src="myresume/images/name.png" width="15px" height="15px"> 姓名：薛焱
+                          </p>
+      						   <!--<input type="text" placeholder="Name" value="" size="35" id="contactName" name="contactName">-->
+                        </div>
+                        <div>
+                          <p>
+                            <img src="myresume/images/phone.png" width="15px" height="15px"> 电话：<a href="tel:13627275116">13627275116</a>
                           </p>
       						   <!--<input type="text" placeholder="Name" value="" size="35" id="contactName" name="contactName">-->
                         </div>
