--- a/resume.html
+++ b/resume.html
@@ -583,7 +583,7 @@
       <div class="row section-head">
           <div class="twelve columns">
               <h1 class="section-title wow fadeInDown">联系方式</h1>
-              <p class="lead">如果您纵览了我的简历，认为能够胜任这份工作，那么下面是我的联系方式，可以通过任何一个途径联系到我，我期待你的联系。</p>
+              <p class="lead">如果您纵览了我的简历，认为我可以胜任这份工作，那么下面是我的联系方式，可以通过任何一个途径联系到我，我期待你的联系。</p>
           </div>
       </div> <!-- Section head --> 
 
