--- a/resume.html
+++ b/resume.html
@@ -437,6 +437,11 @@
           </center>
 		      <div class="description-box">
 			      <h3 align="center">超级车赢家</h3>
+            <h4>项目描述</h4>
+            <p>
+              超级车赢家是车杰盟研发的，针对门店内部管理运营的系统。<br>
+              超级车赢家采用模块化设计，各功能灵活配置，终端门店可以根据自身具体情况，匹配相应的店面管理运营解决方案；
+            </p>
 			      <h4>项目职责：</h4>
                   <p>
                     1.参与项目规划，及可行性研究，需求分析。<br>
@@ -469,6 +474,10 @@
           </center>
 		      <div class="description-box">
 			      <h3 aling="center">车赢家导购</h3>
+            <h4>项目描述</h4>
+            <p>
+              车赢家导购是车杰盟早期研发的免费提供门店使用的移动端汽车服务平台。目前只做较小的功能更新
+            </p>
             <h4>项目职责：</h4>
                   <p> 
                     1.参与项目开发和发布。 <br>
@@ -497,14 +506,20 @@
           </center>
 		      <div class="description-box">
             <h3 align="center">荟购买家版</h3>
-                  <h4>项目职责</h4>
+            <h4>项目描述</h4>
+            <p>
+              车杰盟荟购采购平台是为汽车后服务市场定制开发的平台系统。依托于地域现有的品牌和渠道，遵循传统商业本质，同时融合了互联网传播优势。
+            </p>
+              <h4>项目职责</h4>
                   <p>
                     1.参与项目开发和发布。 <br>
                     2.参与荟购的需求分析，业务流程规划 <br>
                     3.荟购涉及技术点：<br>
-                    （1）购物车的设计与实现<br>
-                    （2）用环信集成IM通讯功能<br>
-                    （3）支付宝支付功能。<br>
+                    （1）集成 TouchID 登录验证<br>
+                    （2）使用keychain管理账号密码<br>
+                    （2）购物车的设计与实现<br>
+                    （3）用环信集成IM通讯功能<br>
+                    （4）支付宝支付功能，微信支付，银联支付。<br>
                   </p>
               <!--<span class="categories"><i class="fa fa-tag"></i>Branding</span>-->
 		      </div>
@@ -522,6 +537,10 @@
           </center>
 		      <div class="description-box">
 			      <h3 align="center">车杰盟移动互联</h3>
+            <h4>项目描述</h4>
+            <p>
+              目的在于拓展办公空间，可随时随地处理办公事务。
+            </p>
                   <h4>项目职责</h4>
                   <p>
                     1.参与项目开发和发布。 <br>
