--- a/resume.html
+++ b/resume.html
@@ -473,7 +473,7 @@
 		      <img class="scale-with-grid" src="myresume/images/cyjdg.png" width="100" alt="" />
           </center>
 		      <div class="description-box">
-			      <h3 aling="center">车赢家导购</h3>
+			      <h3 align="center">车赢家导购</h3>
             <h4>项目描述</h4>
             <p>
               车赢家导购是车杰盟早期研发的免费提供门店使用的移动端汽车服务平台。目前只做较小的功能更新
