--- a/resume.html
+++ b/resume.html
@@ -128,7 +128,7 @@
             <div class="six columns download">
                 <p>
                   <a href="mailto:xueyan_2011@163.com" class="button"><i class="fa fa-paper-plane"></i>联系我</a>
-                  <a href="myresume/iOS开发工程师-薛焱.docx" class="button" target="_blank"><i class="fa fa-download"></i>下载简历</a>
+                  <a href="myresume/iOS开发工程师-薛焱.pdf" class="button" target="_blank"><i class="fa fa-download"></i>下载简历</a>
                 </p>
             </div> <!-- Download Buttons --> 
       </div>
