--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@ header-img: "img/about-bg.jpg"
         熟练开发各类iOS平台APP
     </p>
     <p style="font-size: 15px; text-align: center;">
-        正在学习<a class="origin"> HTML </a>、<a class="origin"> JavaScript </a>、<a class="origin"> C# </a>和<a class="origin"> XMAL </a>
+        正在学习<a class="origin"> HTML </a>、<a class="origin"> JavaScript </a>、<a class="origin"> C# </a>和<a class="origin"> XAML </a>
     </p>
     <p style="font-size: 20px; text-align: center;">
         编程的魅力总是让我欲罢不能
