--- a/resume.html
+++ b/resume.html
@@ -273,7 +273,7 @@
             <li><span class="bar-expand css wow fadeInLeft"></span><em>HTML</em></li>
             <li><span class="bar-expand html5 wow fadeInLeft"></span><em>JavaScript</em></li>
             <li><span class="bar-expand jquery wow fadeInLeft"></span><em>C#</em></li>
-            <li><span class="bar-expand xmal wow fadeInLeft"></span><em>XMAL</em></li>
+            <li><span class="bar-expand XAML wow fadeInLeft"></span><em>XAML</em></li>
           </ul>
 
         </div><!-- end skill-bars -->
@@ -293,7 +293,7 @@
          <div class="nine columns main-col">
 
              <p>
-              1、计算机语言：C、Objective-C、Swift等，可熟练运用Objective-C、Swift进行iOS编程；了解C#，XMAL，HTML，JavaScript <br>
+              1、计算机语言：C、Objective-C、Swift等，可熟练运用Objective-C、Swift进行iOS编程；了解C#，XAML，HTML，JavaScript <br>
               2、熟悉iOS平台的内存管理机制，熟悉内存优化；<br>
               3、具有良好的面向对象编程思想，熟练运用多态、继承、封装，提高内聚，降低耦合，提高代码质量；<br>
               4、具有良好的代码习惯，善于优化代码，对项目中产生的问题有较强的查找原因、解决问题的能力； 5、熟练运用MVC、MVVM等设计思想来搭建框架，善于使用模块化设计，使结构层次清晰易于维护；<br>
