--- a/aboutme.html
+++ b/aboutme.html
@@ -58,7 +58,7 @@
         <p>主力语言</p>
         <p><b> Objective-C </b>和<b> Swift </b></p>
         <p>正在学习</p>
-        <p><b> HTML </b>、<b> JavaScript </b>、<b> C# </b>、<b> XMAL </b></p>
+        <p><b> HTML </b>、<b> JavaScript </b>、<b> C# </b>、<b> XAML </b></p>
         <p>编程的魅力总是让我欲罢不能</p>
     </div>
 <!--
