--- a/web/protocol_freeze.html
+++ b/web/protocol_freeze.html
@@ -437,7 +437,7 @@ Signature4：同Signature2。
         <p> <input type="checkbox" disabled id="djkfl_selected"></input> 银联境内贷记卡：费率为每笔交易金额的<!--28--><u id="djkfl">_____</u>%； </p>
         <p> <input type="checkbox" disabled></input> 银联境外卡：每笔交易金额的<u>_____</u>%，<u>_____</u>元封顶。</p>
         <p> <input type="checkbox" disabled checked=true></input> 支付宝<!--29--><u id="alifl">_____</u>%，<input type="checkbox" disabled checked=true></input>微信支付<!--30--><u id="wxfl">_____</u>%，<input type="checkbox" disabled></input>其他<u>_____</u>%。</p>
-        <p>（2）乙方将自有产权终端__      _，提供给甲方使用，甲方按照人民币__   _ _元/台向乙方支付端服务费（服务费包括但不限于：提供终端使用、终端维护、终端使用培训等）。单台终端从激活的次日开始____ _个月内，若非封顶类交易额达到___  ___万元，则该终端已支付的前述终端服务费作为奖励返还甲方;该终端非封顶类交易额未达到前述标准，则甲方无奖励。单台终端非封顶类交易额提前达到前述标准，则在达到前述标准后的10个工作日内返还给甲方</p>
+        <p>（2）乙方将自有产权终端<u>N910</u>，提供给甲方使用，甲方按照人民币<u>588</u>元/台向乙方支付端服务费（服务费包括但不限于：提供终端使用、终端维护、终端使用培训等）。单台终端从激活的次日开始<u>12</u>个月内，若非封顶类交易额达到<u>88</u>万元，则该终端已支付的前述终端服务费作为奖励返还甲方;该终端非封顶类交易额未达到前述标准，则甲方无奖励。单台终端非封顶类交易额提前达到前述标准，则在达到前述标准后的10个工作日内返还给甲方</p>
         <p>（3）其他业务服务：乙方根据国家监管法规和自身产品服务种类，不断完善对甲方的服务，但必须以本协议约定的方式提前告知甲方，明示收费标准；甲方可选择是否使用该项服务。</p>
         <p>（4）本条款各项服务的费率标准仅适用于本协议项下终端。</p>
         <p><b>6.乙方额外为甲方提供T+0（当日到账）提前到账服务，但入网未满90日或连续交易未超过30日，不能申请开通T+0服务。乙方有权收取相应的提前到账附加手续费（收费标准见星驿付业务受理申请表）。甲方有权通过乙方微信公众号取消或变更提前到账服务，乙方需在T+3个工作日内完成受理工作,乙方将停止收取相应的附加手续费。</b></p>
