--- a/web/protocol_freeze.html
+++ b/web/protocol_freeze.html
@@ -52,7 +52,7 @@ Signature4：同Signature2。
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="charts/jquery.js"></script>
     <title>特约商户银行卡业务受理协议</title>
     <style>
         * {
@@ -100,7 +100,13 @@ Signature4：同Signature2。
     </style>
     <script>
         /// should change the model to JSON
-        function setData(params) {
+        function setData(items) {
+            var params = items
+            var u = navigator.userAgent
+            var isAndroid = u.indexOf('Android') > -1 || u.indexOf('Adr') > -1; //android终端
+            if (isAndroid) {
+                params = JSON.parse(items)
+            }
             var isBusiness = params["bus_lic_no"] != ""
             var isXiaowei = !isBusiness && params["door_img"] != "" && params["choc_img"] != ""
             var isQuick = !isBusiness && !isXiaowei
