--- a/web/protocol_freeze.html
+++ b/web/protocol_freeze.html
@@ -52,7 +52,7 @@ Signature4：同Signature2。
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script type="text/javascript" src="./jquery.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <title>特约商户银行卡业务受理协议</title>
     <style>
         * {
