--- a/web/charts/charts.html
+++ b/web/charts/charts.html
@@ -55,10 +55,10 @@
             }
 
         </style>
-        <script type="text/javascript" src="jquery.js"></script>
+        <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 	</head>
 	<body>
-        <script src="highcharts.js"></script>
+        <script src="https://code.highcharts.com.cn/highcharts/highcharts.js"></script>
         <div class="body">
             <div id="container"></div>
         </div>
