--- a/web/protocol/protocol_freeze.html
+++ b/web/protocol/protocol_freeze.html
@@ -45,6 +45,10 @@ Signature2：取福建国通星驿网络科技有限公司公章。
 103-108：填写签署电子协议的日期。
 Signature3：同Signature1。
 Signature4：同Signature2。
+109项填写：N910/SP610/ME50/ME66，
+110项填写：588/168/198/158，
+111项填写： 88/40/38/28，
+112项填写： 12/6/12/12，
 
 -->
 <!DOCTYPE html>
@@ -107,21 +111,21 @@ Signature4：同Signature2。
             if (isAndroid) {
                 params = JSON.parse(items)
             }
-            var isBusiness = params["bus_lic_no"] != ""
-            var isXiaowei = !isBusiness && params["door_img"] != "" && params["choc_img"] != ""
-            var isQuick = !isBusiness && !isXiaowei
-            var isPOS = params["terminl_num"] >= "0"
-            var isSaoma = !isPOS && params["sdk_num"] > "0"
-            var isTaipai = !isPOS && !isSaoma && params["trm_num"] > "0"
-            var isChajian = !isPOS && !isSaoma && !isTaipai && params["plu_num"] > "0"
+            var isBusiness = params["incom_type"] == "2" || params["incom_type"] == "4"
+            var isXiaowei = params["incom_type"] == "1"
+            var isQuick = params["incom_type"] == "3"
+            var hasPOS = params["terminl_num"] > "0"
+            var hasOldPOS = params["trm_pos"] > "0"
+            var hasSaoma = params["sdk_num"] > "0"
+            var hasTaipai = params["trm_num"] > "0"
+            var hasChajian = params["plu_num"] > "0"
             // 1：小微/快速进件填商户层姓名法人，企业进件填商户注册名称。
             $("#nm").html(isBusiness ? params["merc_cnm"] : params["crp_nm"]);
             // 2：商户地址（商户层）
             $("#merc_add").html(params["merc_ad"] + params["merc_adds"])
-            // 5：终端设备台数仅取值有智能pos的，其他不计算，纯扫码纯台牌算0。
-            $("#pos_num").html(params["terminl_num"])
+
             // 7-15：POS进件全部勾选，扫码设备（扫码王、电子台牌）进件除9-12外都勾选，台牌和插件进件都不勾选。
-            if (isPOS) {
+            if (hasPOS || hasOldPOS) {
                 $("#tr1").prop({"checked":true})
                 $("#tr2").prop({"checked":true})
                 $("#tr3").prop({"checked":true})
@@ -131,7 +135,7 @@ Signature4：同Signature2。
                 $("#tr7").prop({"checked":true})
                 $("#tr8").prop({"checked":true})
                 $("#tr9").prop({"checked":true})
-            } else if (isSaoma) {
+            } else if (hasSaoma) {
                 $("#tr1").prop({"checked":true})
                 $("#tr2").prop({"checked":true})
                 $("#tr3").prop({"checked":false})
@@ -141,7 +145,7 @@ Signature4：同Signature2。
                 $("#tr7").prop({"checked":true})
                 $("#tr8").prop({"checked":true})
                 $("#tr9").prop({"checked":true})
-            } else if (isTaipai || isChajian) {
+            } else if (hasTaipai || hasChajian) {
                 $("#tr1").prop({"checked":false})
                 $("#tr2").prop({"checked":false})
                 $("#tr3").prop({"checked":false})
@@ -153,7 +157,7 @@ Signature4：同Signature2。
                 $("#tr9").prop({"checked":false})
             }
             // 16-19：开通了银行卡产品则勾选。
-            if (isPOS || isSaoma) {
+            if (hasPOS || hasOldPOS || hasSaoma) {
                 $("#card1").prop({"checked":true})
                 $("#card2").prop({"checked":true})
                 $("#card3").prop({"checked":true})
@@ -185,8 +189,8 @@ Signature4：同Signature2。
                 $("#settle_type").html("D+1")
             }
             // 26-30：根据实际值填写，27项若不封顶则填“-”。
-            $("#jjkfl_selected").prop({"checked":isPOS || isSaoma})
-            $("#djkfl_selected").prop({"checked":isPOS || isSaoma})
+            $("#jjkfl_selected").prop({"checked":hasPOS || hasOldPOS || hasSaoma})
+            $("#djkfl_selected").prop({"checked":hasPOS || hasOldPOS || hasSaoma})
             $("#jjkfl").html(params["fee_rat"])
             $("#jjkfd").html(params["max_fee_amt"])
             if (params["max_fee_amt"] == "0") {
@@ -195,6 +199,30 @@ Signature4：同Signature2。
             $("#djkfl").html(params["fee_rat1"])
             $("#alifl").html(params["fee_rat3"])
             $("#wxfl").html(params["fee_rat_scan"])
+            // 109: 终端类型，项填写：N910/SP610/ME50/ME66，
+            var trmArr = new Array()
+            if (hasPOS) { trmArr.push("N910") }
+            if (hasOldPOS) { trmArr.push("SP610") }
+            if (hasSaoma) { trmArr.push("ME50/ME66") }
+            $("#trm_type").html(trmArr.join("/"))
+            // 110：服务费，项填写：588/168/198/158，
+            var trmServiceChargeArr = new Array()
+            if (hasPOS) { trmServiceChargeArr.push("588") }
+            if (hasOldPOS) { trmServiceChargeArr.push("168") }
+            if (hasSaoma) { trmServiceChargeArr.push("198/158") }
+            $("#trm_service_charge").html(trmServiceChargeArr.join("/"))
+            // 111：非封顶金额，项填写： 88/40/38/28，
+            var trmCappingArr = new Array()
+            if (hasPOS) { trmCappingArr.push("88") }
+            if (hasOldPOS) { trmCappingArr.push("40") }
+            if (hasSaoma) { trmCappingArr.push("38/28") }
+            $("#trm_capping").html(trmCappingArr.join("/"))
+            // 112：月数，项填写： 12/6/12/12，
+            var trmMonthArr = new Array()
+            if (hasPOS) { trmMonthArr.push("12") }
+            if (hasOldPOS) { trmMonthArr.push("6") }
+            if (hasSaoma) { trmMonthArr.push("12/12") }
+            $("#trm_month").html(trmMonthArr.join("/"))
             // 33：取商户地址。
             $("#merc_add1").html(params["merc_ad"] + params["merc_adds"])
             // 34-35：填写签署电子协议的日期。
@@ -203,16 +231,17 @@ Signature4：同Signature2。
             // Signature1：个人是个人签名，企业是公司章。
             $("#crp_nm").html(isBusiness ? params["merc_cnm"] : params["crp_nm"])
             // 36-39：根据实际情况勾选，勾选38时，39项的填写规则为：“扫码王；台牌；插件；”分号隔开。
-            $("#tab_is_pos").prop({"checked":params["terminl_num"] >= "0"})
-            $("#tab_is_others").prop({"checked":params["sdk_num"] > "0" || params["trm_num"] > "0" || params["plu_num"] > "0"})
+            $("#tab_is_old_pos").prop({"checked":hasOldPOS})
+            // $("#tab_is_pos").prop({"checked":hasPOS})
+            $("#tab_is_others").prop({"checked":hasSaoma || hasTaipai || hasChajian})
             var des = ""
-            if (params["sdk_num"] > "0") {
+            if (hasSaoma) {
                 des = "扫码设备；"
             }
-            if (params["trm_num"] > "0") {
+            if (hasTaipai) {
                 des = des + "台牌；"
             }
-            if (params["plu_num"] > "0") {
+            if (hasChajian) {
                 des = des + "收银插件；"
             }
             $("#tab_others_des").html(des)
@@ -239,11 +268,20 @@ Signature4：同Signature2。
             // 56:营业执照号码 57：营业执照到期日，注意小微和快速进件不填。
             if (isBusiness) {
                 $("#tab_bus_id").html(params["bus_lic_no"])
+                if (!params["bse_lice_limited"]) {
+                    params["bse_lice_limited"] = params["bus_exp_dt"]
+                }
                 $("#tab_bus_date").html(params["bse_lice_limited"])
             }
             // 58-74：根据实际填写，
             // ①若法人代表、实际受益人、实际控制人、授权办理人均为法人自身，则只需填写法人代表一栏；
             // ②若不一致则需分别填写（法人代表/授权办理人为法人，实际受益人/实际控制人为结算人）。
+            if (!params["corporate_idcord"]) {
+                params["corporate_idcord"] = params["crp_id_no"]
+            }
+            if (!params["corporate_idlimited"]) {
+                params["corporate_idlimited"] = params["crp_exp_dt"]
+            }
             if (params["corporate_idcord"] == params["icrp_id_no"] || params["icrp_id_no"] == "" || params["icrp_id_no"] == null ) {
                 $("#tab_crp_nm").html(params["crp_nm"])
                 $("#tab_crp_card_id").html(params["corporate_idcord"])
@@ -274,9 +312,11 @@ Signature4：同Signature2。
             $("#tab_settle_bank_no").html(params["wc_lbnk_no"])
             $("#tab_settle_bank_nm1").html(params["wc_lbnk_nm"])
             // 82-85：根据实际填写，只填写智能POS的数量，扫码王（扫码设备）和台牌、插件等情况不计数，如没有POS则不填。智能终端服务费填为30元/台。
-            $("#tab_pos_num_selected").prop({"checked":isPOS})
-            $("#tab_pos_num").html(params["terminl_num"])
-            $("#tab_pos_total_num").html(params["terminl_num"])
+            $("#tab_pos_num_selected").prop({"checked":hasPOS})
+            if (hasPOS) {
+                $("#tab_pos_num").html(params["terminl_num"])
+                $("#tab_pos_total_num").html(params["terminl_num"])
+            }
             // 86-95：根据实际填写，93填D1的服务费。
             $("#tab_settle_t1").prop({"checked":params["stl_typ"] == "1"}) // T+1
             $("#tab_settle_d1").prop({"checked":params["stl_typ"] == "2"}) // D+1
@@ -443,7 +483,7 @@ Signature4：同Signature2。
         <p> <input type="checkbox" disabled id="djkfl_selected"></input> 银联境内贷记卡：费率为每笔交易金额的<!--28--><u id="djkfl">_____</u>%； </p>
         <p> <input type="checkbox" disabled></input> 银联境外卡：每笔交易金额的<u>_____</u>%，<u>_____</u>元封顶。</p>
         <p> <input type="checkbox" disabled checked=true></input> 支付宝<!--29--><u id="alifl">_____</u>%，<input type="checkbox" disabled checked=true></input>微信支付<!--30--><u id="wxfl">_____</u>%，<input type="checkbox" disabled></input>其他<u>_____</u>%。</p>
-        <p>（2）乙方将自有产权终端<u>N910</u>，提供给甲方使用，甲方按照人民币<u>588</u>元/台向乙方支付端服务费（服务费包括但不限于：提供终端使用、终端维护、终端使用培训等）。单台终端从激活的次日开始<u>12</u>个月内，若非封顶类交易额达到<u>88</u>万元，则该终端已支付的前述终端服务费作为奖励返还甲方;该终端非封顶类交易额未达到前述标准，则甲方无奖励。单台终端非封顶类交易额提前达到前述标准，则在达到前述标准后的10个工作日内返还给甲方</p>
+        <p>（2）乙方将自有产权终端<!--109-->><u id="trm_type"></u>，提供给甲方使用，甲方按照人民币<!--110-->><u id="trm_service_charge"></u>元/台向乙方支付端服务费（服务费包括但不限于：提供终端使用、终端维护、终端使用培训等）。单台终端从激活的次日开始<!--112-->><u id="trm_month"></u>个月内，若非封顶类交易额达到<!--111-->><u id="trm_capping"></u>万元，则该终端已支付的前述终端服务费作为奖励返还甲方;该终端非封顶类交易额未达到前述标准，则甲方无奖励。单台终端非封顶类交易额提前达到前述标准，则在达到前述标准后的10个工作日内返还给甲方</p>
         <p>（3）其他业务服务：乙方根据国家监管法规和自身产品服务种类，不断完善对甲方的服务，但必须以本协议约定的方式提前告知甲方，明示收费标准；甲方可选择是否使用该项服务。</p>
         <p>（4）本条款各项服务的费率标准仅适用于本协议项下终端。</p>
         <p><b>6.乙方额外为甲方提供T+0（当日到账）提前到账服务，但入网未满90日或连续交易未超过30日，不能申请开通T+0服务。乙方有权收取相应的提前到账附加手续费（收费标准见星驿付业务受理申请表）。甲方有权通过乙方微信公众号取消或变更提前到账服务，乙方需在T+3个工作日内完成受理工作,乙方将停止收取相应的附加手续费。</b></p>
@@ -479,7 +519,7 @@ Signature4：同Signature2。
                 </tr>
             </table>
             <table class="normal_table">
-                <td colspan="4"><b>*商户申请机具：<!--36--><input type="checkbox" disabled></input>传统pos <!--37--><input type="checkbox" disabled checked=true id="tab_is_pos"></input>智能pos <!--38--><input type="checkbox" disabled checked=true id="tab_is_others"></input>其他<!--39--><u id="tab_others_des">&nbsp;&nbsp;&nbsp;&nbsp;</u></b></td>
+                <td colspan="4"><b>*商户申请机具：<!--36--><input type="checkbox" disabled id="tab_is_old_pos"></input>传统pos <!--37--><input type="checkbox" disabled checked=true id="tab_is_pos"></input>智能pos <!--38--><input type="checkbox" disabled checked=true id="tab_is_others"></input>其他<!--39--><u id="tab_others_des">&nbsp;&nbsp;&nbsp;&nbsp;</u></b></td>
                 <td colspan="1">*参加培训：<!--40--><input type="checkbox" disabled checked=true></input>是 <!--41--><input type="checkbox" disabled></input>否</td>
             </table>
             <table class="border_table">
