--- a/web/protocol/protocol.html
+++ b/web/protocol/protocol.html
@@ -51,6 +51,8 @@ Signature4：同Signature2。
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="format-detection"
+content="telephone=no,date=no,address=no,email=no,url=no"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <title>特约商户银行卡业务受理协议</title>
